@@ -1,3 +1,11 @@
+Mon Sep 26 11:06:40 2005  William Otte  <wotte@dre.vanderbilt.edu>
+
+	* DAnCE/NodeApplicationManager/ImplementationInfo.cpp
+	* DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.cpp
+	* DAnCE/NodeManager/NodeManager_Impl.cpp
+
+	Cleared up some scoreboard errors. 
+	
 Sat Sep 24 20:44:20 2005  Gan Deng  <dengg@dre.vanderbilt.edu>
 
 	* DAnCE/DomainApplicationManager/DomainApplicationManager.mpc
